Rename lastSeen to livenessState Change display string to "Last user activity"